nobase_include_HEADERS =              \
anf/ConcurrentMap.h                   \
anf/ConcurrentQueue.h                 \
anf/IoAcceptor.h                      \
anf/IoConnector.h                     \
anf/IoSockAcceptor.h                  \
anf/IoSockConnector.h                  \
anf/IoFilter.h                        \
anf/IoFilterChain.h                   \
anf/IoFuture.h                        \
anf/IoHandler.h                       \
anf/IoPollingProcessor.h              \
anf/IoProcessor.h                     \
anf/IoSimpleProcessorPool.h           \
anf/IoService.h                       \
anf/IoSession.h                       \
anf/IoSessionAdapter.h                \
anf/IoSessionAttribute.h              \
anf/IoConfiguration.h                 \
anf/WakeablePoll.h                    \
anf/SimpleObjectPool.h                \
anf/Exception.h                       \
anf/Utility.h                         \
anf/future/AcceptorOperationFuture.h  \
anf/future/ConnectFuture.h            \
anf/future/WriteFuture.h              \
anf/filter/ScpMessageFilter.h         \
anf/filter/SimpleAsyncMessageFilter.h \
anf/filter/HttpMessageFilter.h        \
anf/filter/BencodingMessageFilter.h   \
anf/filter/SMPPMessageFilter.h        \
anf/filter/CMPP20MessageFilter.h      \
anf/filter/CMPP30MessageFilter.h      \
anf/filter/SMMCMessageFilter.h        \
anf/filter/CmdLineMessageFilter.h     \
anf/protocol/ScpMessage.h             \
anf/protocol/SimpleAsyncMessage.h     \
anf/protocol/HttpMessage.h            \
anf/protocol/BencodingMessage.h       \
anf/protocol/SMPPMessage.h            \
anf/protocol/CMPPMessage.h            \
anf/protocol/SMMCMessage.h            \
anf/protocol/CmdLineMessage.h         \
anf/protocol/mm4/MM4SMTP.h            \
anf/protocol/mm4/MM4HTTP.h            \
anf/util/MessageTable.h               \
anf/util/RoutingTable.h               \
anf/util/SessionManager.h             \
anf/util/ConnectManager.h             \
anf/util/AsyncClient.h                \
anf/util/SyncClient.h
